Updated Owner Bios

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                           <img class="is-rounded" src="img/profile.jpg">
                         </figure>
                         -->
-                        <p class="subtitle">After spending around 20 years as a Mechanic, Billy ventured into running small crews working on installs. Over two decades later Billy has grown the business into a full service installation of all things warehouse related. Billy is devoted to customer satisfaction and making sure every job big or small is completed safely and accurately.</p>
+                        <p class="subtitle">After nearly 20 years working as a mechanic, Billy ventured into running small crews working on installs. Over two decades later, Billy has grown the business into a full-service installation of all things warehouse related. Billy is devoted to customer satisfaction and making sure every job, big or small, is completed safely and accurately.</p>
                         <a class="phone-link" href="tel:770-366-0841">(770) 366-0841</a>
                       </div>
                       <div class="tile is-child box">
@@ -233,7 +233,7 @@
                         <figure class="image profile mb-2">
                           <img class="is-rounded" src="img/levi.jpeg">
                         </figure>
-                        <p class="subtitle">After 13+ years in manufacturing, warehousing and logistics Levi decided to put his experience to work assisting those industries with their warehouse needs. Levi is detail oriented with a focus for growth and expansion.</p>
+                        <p class="subtitle">After more than 13 years in manufacturing, warehousing and logistics, Levi decided to put his experience to work assisting those industries with their warehouse needs. Levi is detail-oriented with a focus on growth and expansion.</p>
                         <a class="phone-link" href="tel:770-713-2437">(770) 713-2437</a>
                       </div>
                     </div>
